--- a/2018_10_DjangoConUS.podium/theme.css
+++ b/2018_10_DjangoConUS.podium/theme.css
@@ -373,6 +373,7 @@ Added: Zenburn, mostly.
 .center { text-align: center}
 .far { position: absolute; left: -80px; bottom: 0px; }
 .smol { font-size: 70%; }
+.small { font-size: 60%; line-height: 60%; padding: 0}
 .red   { outline: 4px solid #FF6B6B; outline-offset: 5px; }
 .r { color: red }
 .code { font-family: monospace }
