--- a/_includes/default.html
+++ b/_includes/default.html
@@ -24,12 +24,12 @@
 
 	<!-- Le fav and touch icons -->
 	<!-- Update these with your own images
-	<link rel="shortcut icon" href="images/favicon.ico">
+	<link rel="shortcut icon" href="inmages/favicon.ico">
 	<link rel="apple-touch-icon" href="images/apple-touch-icon.png">
 	<link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
 	<link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">
 	-->
-    <link rel="shortcut icon" href="favicon.ico" />
+    <link rel="shortcut icon" href="images/favicon.ico" />
     
 
 	<link rel="alternate" type="application/rss+xml" title="{{ site.name }}" href="{{ site.BASE_PATH }}/feed.xml">
