Fix images (see notes for script)
convert -resize 1600x900^ image.jpg image.jpeg

Then resize H or W manually as you like.

--- a/2019_01_DocsDownUnder.podium/theme.css
+++ b/2019_01_DocsDownUnder.podium/theme.css
@@ -114,9 +114,9 @@ li cite {
     font-size: 18pt;
     position: absolute;
     bottom: 2em;
-    right: 5em;
     width: 80%;
-    text-align: right;
+    margin-left: 20px; 
+    text-align: left;
 }
 
 .footnotes a { color: grey }
