--- a/2019_01_DocsDownUnder.podium/theme.css
+++ b/2019_01_DocsDownUnder.podium/theme.css
@@ -35,13 +35,6 @@ h3 {
     font-size:32pt;
 }
 
-p {
-    color: white;
-    font-family: Raleway;  
-    font-size: 24pt;
-    line-height: 1.4em;
-}
-
 
 li {
     font-size: 24pt;
@@ -145,7 +138,7 @@ li cite {
 .remark-slide-content h3 {
     text-align: center;
     margin-top: 250px; 
-    font-family: Raleway !important; 
+    font-family: Secondary !important; 
 }
 
 .remark-slide-content.bottom h1 {
@@ -411,7 +404,7 @@ rr { font-family: "RedactedR", regular;  }
 .venn { position: absolute; right: -50px; top: 100px; }
 @font-face { font-family: "Roboto"; src: url("fonts/Roboto-Regular.ttf") format('truetype'); font-style: normal; }
 @font-face { font-family: "Staatliches"; src: url("fonts/Staatliches-Regular.ttf") format('truetype'); font-style: normal; }
-@font-face { font-family: "Raleway"; src: url("fonts/Raleway-Medium.ttf") format('truetype'); font-style: normal; }
+@font-face { font-family: "Secondary"; src: url("fonts/OpenSans-Regular.ttf") format('truetype'); font-style: normal; }
 .roboto { font-family: "Roboto", regular; }
 
 .bigright { font-size: 40pt; position: absolute; z-index: 100; bottom: 100x; right: 100px; }
