--- a/2019_05_PyConUS.podium/theme.css
+++ b/2019_05_PyConUS.podium/theme.css
@@ -472,3 +472,4 @@ Added: Zenburn, mostly.
 
 .paddown { padding-top: 20px }
 .right-image { float: right; max-width: 400px; padding: 20px;} 
+.white a { color: white }
