--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="stylesheet" href="css/normalize.css" />
-  <link rel="stylesheet" href="css/skeleton.css" />
-  <link rel="stylesheet" href="css/digital_style.css" />
+  <link rel="stylesheet" href="{{site.url }}/css/normalize.css" />
+  <link rel="stylesheet" href="{{site.url }}/css/skeleton.css" />
+  <link rel="stylesheet" href="{{site.url }}/css/digital_style.css" />
+  <link rel="shortcut icon" href="{{site.url}}/img/favicon.ico" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:400,300,600" />
 </head>
 <body>
-  <div class="section intro-header" style="background-image: url('img/header_image.jpg')">
+  <div class="section intro-header" style="background-image: url('{{site.url}}/img/header_image.jpg')">
     <div class="container">
-      <h1 class="section-heading">Talks by Katie McLaughlin</h1>
+      <h1 class="section-heading">{{page.title}}</h1>
     </div>
   </div>
   {{ content }} 
