Add last minute changes from a conference a month ago

--- a/2019_06_PyConTH.podium/theme.css
+++ b/2019_06_PyConTH.podium/theme.css
@@ -449,7 +449,7 @@ Added: Zenburn, mostly.
     font-weight: normal;
     font-family: "PT Sans" !important; 
     color: grey;
-    content: "@glasnt";
+    content: "@glasnt | #pyconth2019";
     padding: 10px; 
     font-size: 18pt;
     position: absolute;
