--- a/2019_10_DevOpsDaysAKL.podium/style.css
+++ b/2019_10_DevOpsDaysAKL.podium/style.css
@@ -12,6 +12,21 @@
     color: #000;
 }
 
+@page {
+  size: 1210px 681px;
+  margin: 0;
+}
+
+@media print {
+  .remark-slide-scaler {
+    width: 100% !important;
+    height: 100% !important;
+    transform: scale(1) !important;
+    top: 0 !important;
+    left: 0 !important;
+  }
+}
+
 /***********************
  * Common content markup
  ***********************/
@@ -32,6 +47,9 @@ h2 {
 }
 
 h3 {
+    text-align: center;
+    margin-top: 250px; 
+    font-family: Secondary !important; 
     font-size:32pt;
 }
 
@@ -138,11 +156,6 @@ li cite {
 /* Title slides */
 /****************/
 
-.remark-slide-content h3 {
-    text-align: center;
-    margin-top: 250px; 
-    font-family: Secondary !important; 
-}
 
 .remark-slide-content.bottom h1 {
     vertical-align: bottom;
