--- a/2019_10_PyGotham.podium/style.css
+++ b/2019_10_PyGotham.podium/style.css
@@ -6,6 +6,22 @@
 @import url("fonts/pt-serif.css");
 @import url("fonts/roboto.css");
 
+
+@page {
+  size: 1210px 681px;
+  margin: 0;
+}
+
+@media print {
+  .remark-slide-scaler {
+    width: 100% !important;
+    height: 100% !important;
+    transform: scale(1) !important;
+    top: 0 !important;
+    left: 0 !important;
+  }
+}
+
 .caps { font-family: "PT Serif", serif;  font-variant: small-caps;}
 .thin { font-weight: normal }
 .thick { font-weight: 600 }
