--- a/_layouts/writeup.html
+++ b/_layouts/writeup.html
@@ -7,6 +7,7 @@ layout: page
 <p>{{page.content}}</p>
 {% endif %}
  
+{% if page.recording %}<a href="{{recording}}">Watch this talk</a>{% endif %}
 {% if page.notes %}
 <hr>
 <p>{{page.notes}}</p>
